--- a/styles/style.css
+++ b/styles/style.css
@@ -496,19 +496,19 @@
   padding-left: 1rem;
 }
 .about__text .list:nth-of-type(1) {
-  background: url("../images/list-1.png") no-repeat left top;
+  background: url("../images/list-1.webp") no-repeat left top;
   padding: 20px 0px 30px 80px;
   list-style: none;
   margin: 10px;
 }
 .about__text .list:nth-of-type(2) {
-  background: url("../images/list-2.png") no-repeat left top;
+  background: url("../images/list-2.webp") no-repeat left top;
   padding: 20px 0px 30px 80px;
   list-style: none;
   margin: 10px;
 }
 .about__text .list:nth-of-type(3) {
-  background: url("../images/list-3.png") no-repeat left top;
+  background: url("../images/list-3.webp") no-repeat left top;
   padding: 20px 0px 30px 80px;
   list-style: none;
   margin: 10px;
