--- a/styles/style.css
+++ b/styles/style.css
@@ -633,8 +633,9 @@ section {
     width: 100%;
   }
   .about__header .about__heading {
-    transform: translateX(-2.5rem);
+    transform: translateX(-3rem);
     z-index: 2;
+    font-size: 8rem;
   }
   .about-bg-sm {
     position: absolute;
