--- a/styles/style.css
+++ b/styles/style.css
@@ -203,7 +203,7 @@ h1 {
 }
 
 h2 {
-  font-size: 7rem;
+  font-size: 4rem;
 }
 
 h3 {
@@ -226,13 +226,9 @@ p {
   }
 
   h2 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 }
-header {
-  background-color: #478dff;
-}
-
 ul {
   margin: 0;
   padding: 0;
@@ -325,6 +321,7 @@ section {
   .hero__info {
     align-items: center;
     margin-top: 20%;
+    padding: 0;
   }
   .hero__text {
     align-items: center;
@@ -670,12 +667,16 @@ section {
   }
   .about__header {
     justify-content: center;
+    padding-top: 5rem;
   }
   .about__header img {
     max-width: 200px;
   }
   .about__header .first {
     justify-self: flex-end;
+  }
+  .about__text {
+    margin-top: 5rem;
   }
   .about__img {
     transform: rotate(10deg);
@@ -695,6 +696,9 @@ section {
   color: #ff8700;
   text-shadow: 2px 2px white;
   margin: 3rem 0 8rem;
+}
+.rm__header .rm__heading {
+  text-decoration: underline;
 }
 .rm__container {
   display: flex;
@@ -760,6 +764,84 @@ section {
     width: 100%;
     height: 100%;
     z-index: -1;
+  }
+}
+.prize {
+  min-height: 100vh;
+  background-image: url("../images/breadcrumps-4x.webp");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.prize__header {
+  padding-top: 3rem;
+}
+.prize__header .prize__heading {
+  text-align: center;
+  text-decoration: underline;
+}
+.prize__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+}
+.prize__text {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 8rem;
+  width: 75%;
+  height: auto;
+  font-size: 2rem;
+  padding: 4rem;
+  margin: 10rem;
+  color: #ff8700;
+  background-color: rgba(255, 255, 255, 0.85);
+  border-radius: 26px;
+  box-shadow: 0px 0px 0px 0px rgba(145, 192, 255, 0.5), inset 15px -15px 16px 0px rgba(145, 192, 255, 0.6), inset 0px 11px 28px 0px white;
+}
+.prize__items {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 3rem;
+}
+.prize__item {
+  width: 100%;
+}
+.prize__item__header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+  cursor: pointer;
+}
+.prize .prize__chevron {
+  transition: all 0.3s;
+}
+.prize .collapsible--expanded .prize__chevron {
+  transform: rotate(180deg);
+}
+.prize .collapsible__content {
+  color: black;
+}
+
+@media screen and (max-width: 768px) {
+  .prize {
+    background-image: url("../images/breadcrumps-sm.webp");
+  }
+  .prize__text {
+    margin: 10rem 0;
+    padding: 4rem 2rem;
+    width: 85%;
   }
 }
 .go-up {
