--- a/styles/style.css
+++ b/styles/style.css
@@ -880,6 +880,7 @@ section {
     margin: 10rem 0;
     padding: 4rem 2rem;
     width: 85%;
+    gap: 5rem;
   }
   .prize .footer {
     height: 75px;
