--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: Hand;
+  src: url("../fonts/WidatiRegularDemo.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 .container {
   max-width: 1140px;
   margin: 0 auto;
@@ -438,6 +444,8 @@ section {
   color: white;
   background-color: #ff8700;
   border-bottom: 4px solid white;
+  position: relative;
+  z-index: 5;
 }
 .nav .logo {
   width: 70px;
@@ -773,18 +781,12 @@ section {
   }
 }
 .prize {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  gap: 40rem;
-  min-height: 150vh;
+  min-height: 100vh;
   background-image: url("../images/breadcrumps-4x.webp");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   position: relative;
-  border-top: 5px solid white;
+  padding-bottom: 30rem;
 }
 .prize__header {
   padding-top: 3rem;
@@ -847,42 +849,9 @@ section {
 .prize .collapsible__content {
   color: black;
 }
-.prize .footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  background: transparent;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 3rem;
-  border-top: 3px solid white;
-  height: 150px;
-  padding-top: 5rem;
-  padding-bottom: 10rem;
-}
-.prize .footer .social {
-  font-size: 5rem;
-  color: #ff8700;
-  transition: all 0.3s;
-  cursor: pointer;
-}
-.prize .footer .social:hover {
-  color: white;
-  transform: translateY(-1rem);
-}
 
 @media screen and (max-width: 768px) {
   .prize {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10rem;
-    min-height: 100vh;
     background-image: url("../images/breadcrumps-sm.webp");
   }
   .prize__text {
@@ -891,12 +860,203 @@ section {
     width: 85%;
     gap: 5rem;
   }
-  .prize .footer {
-    height: 75px;
-    padding-bottom: 8rem;
+}
+.footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  height: 150px;
+  background-image: url("../images/footer.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-top: 5px solid #ff8700;
+}
+.footer .social {
+  font-size: 5rem;
+  color: #ff8700;
+  transition: all 0.3s;
+}
+.footer .social:hover {
+  transform: translateY(-1rem);
+  color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    background-image: url("../images/footer-sm.png");
   }
-  .prize .footer .social {
-    font-size: 3rem;
+  .footer .social {
+    font-size: 2.8rem;
+  }
+}
+.tokenomics {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+  align-items: center;
+  background-image: url("../images/token-bg-sm.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  min-height: 120vh;
+  padding: 0 2rem 25rem;
+}
+.tokenomics__content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0;
+  align-items: center;
+  width: 340px;
+  height: 500px;
+  margin-left: 0;
+  margin-top: 10rem !important;
+  background-image: url("../images/memory.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  transform: none;
+  margin-top: 10rem;
+  box-sizing: unset;
+  border-radius: 25px;
+  box-shadow: 0 0 10px 20px white inset;
+  border: 0;
+}
+.tokenomics__text {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 3rem;
+  align-items: center;
+  color: #ff8700;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.35);
+  backdrop-filter: blur(4px);
+  border-radius: 25px;
+}
+.tokenomics__text .text__heading {
+  font-family: hand;
+  font-size: 3rem;
+  font-weight: 400;
+  margin-top: 3rem;
+}
+.tokenomics__text .token__list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+  align-items: flex-start;
+  width: 350px;
+  height: 350px;
+}
+.tokenomics__text .token__list .token__list__item {
+  margin-left: 2rem;
+  font-size: 1.8rem;
+  background: url("../images/list-item.png") no-repeat left top;
+  padding: 20px 0px 30px 50px;
+  list-style: none;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1100px) {
+  .tokenomics__content {
+    width: 500px !important;
+    height: 500px !important;
+    margin-left: 10rem !important;
+  }
+
+  .token__list {
+    height: 400px !important;
+    gap: 0;
+  }
+}
+@media screen and (min-width: 769px) {
+  .tokenomics {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+    align-items: flex-start;
+    background-image: url("../images/token.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    min-height: 120vh;
+    padding-bottom: 50rem;
+  }
+  .tokenomics__content {
+    margin-left: 30rem;
+    margin-top: 10rem !important;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0;
+    width: 600px;
+    height: 500px;
+    background-image: url("../images/memory.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    transform: rotate(-10deg);
+    margin-top: 10rem;
+    box-sizing: unset;
+    box-shadow: 0 0 10px 20px white inset;
+    border-width: 3rem 3rem 10rem;
+    border-color: white;
+    border-style: solid;
+    border-radius: 25px;
+  }
+  .tokenomics__text {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+    align-items: center;
+    color: #ff8700;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.35);
+    backdrop-filter: blur(4px);
+  }
+  .tokenomics__text .text__heading {
+    font-family: hand;
+    margin-top: 2rem;
+    font-size: 4rem;
+    font-weight: 400;
+  }
+  .tokenomics__text .token__list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 2rem;
+    align-items: flex-start;
+    width: 100%;
+    height: 400px;
+  }
+  .tokenomics__text .token__list .token__list__item {
+    margin-left: 3rem;
+    font-size: 1.8rem;
+    background: url("../images/list-item.png") no-repeat left top;
+    padding: 20px 0px 30px 50px;
+    list-style: none;
   }
 }
 .go-up {
