--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -22,6 +22,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: Hand;
+  src: url("../fonts/WidatiRegularDemo.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 $heading-font: "rush";
 $content-font: "Carter";
