--- a/scss/_prizes.scss
+++ b/scss/_prizes.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-size: 100% 100%;
   position: relative;
+  padding-bottom: 30rem;
   &__header {
     padding-top: 3rem;
     .prize__heading {
@@ -28,8 +29,6 @@
     box-shadow: 0px 0px 0px 0px rgba(145, 192, 255, 0.5),
       inset 15px -15px 16px 0px rgba(145, 192, 255, 0.6),
       inset 0px 11px 28px 0px rgb(255, 255, 255);
-    h2 {
-    }
   }
   &__items {
     @include flex(column, wrap, flex-start, 3rem);
@@ -50,26 +49,6 @@
   .collapsible__content {
     color: black;
   }
-  .footer {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    background: transparent;
-    @include flex(row, wrap, center, 3rem);
-    border-top: 3px solid white;
-    height: 150px;
-    .social {
-      font-size: 5rem;
-      color: $secondary-color;
-      transition: all 0.3s;
-      cursor: pointer;
-      &:hover {
-        color: white;
-        transform: translateY(-1rem);
-        // margin-bottom: 2rem;
-      }
-    }
-  }
 }
 
 //* Prize-Mobile
@@ -81,6 +60,7 @@
       margin: 10rem 0;
       padding: 4rem 2rem;
       width: 85%;
+      gap: 5rem;
     }
   }
 }
